# DND-Campaign-Assistant

./: .gitignore  LICENSE  MANIFEST.in  README.md  campaign_assistant.py  clear_cache.bat  content_save.py  pyproject.toml  requirements.txt  setup.py  start_app.bat
data/: canon.json  embeddings.json  session_template.md  styles.md  system_prompt.txt
dnd_campaign_assistant/: __init__.py  _version.py  app.py  dnd5e_data.py  llm_utils.py  narrative_generator.py
